# enstaB-ros

./: .gitignore  README.md
ai_mapping_robot/: CMakeLists.txt  package.xml
ai_mapping_robot/msg/: InitData.msg
ai_mapping_robot/scripts/: LatLongUTMconversion.py  ai_mapping_robot_node.py  tuto.py  waiter_subscriber.py
astar_path/: CMakeLists.txt  README.md  package.xml
astar_path/launch/: astar.launch
astar_path/src/: astar_path_node.cpp
astar_path/srv/: GoalSet.srv
autonmous_move_handling/: CMakeLists.txt  package.xml
autonmous_move_handling/scripts/: autonomous_move_handling_node.py
car_calibration/: CMakeLists.txt  README.md  package.xml
car_calibration/scripts/: car_calibration_node.py
car_controller/: CMakeLists.txt  package.xml
car_controller/launch/: car_controller_launch.launch
car_controller/src/: car_controller_case_path.cpp  car_controller_node.cpp  car_controller_occupancy_grid.cpp
car_controller/srv/: Double_Control.srv  SetAlgoDrive.srv  Start_Control.srv
colour_detection/: CMakeLists.txt  package.xml
colour_detection/src/: colour_detection_node.cpp  image_proc.cpp  todelete.cpp
colour_detection/srv/: Threshold.srv
diagnostic_ros_system/: CMakeLists.txt  package.xml
diagnostic_ros_system/scripts/: diagnostic_ros_system_node.py
drift_detection/: CMakeLists.txt  package.xml
drift_detection/scripts/: drift_detection_node.py
flux_video/: CMakeLists.txt  package.xml
flux_video/src/: flux_video_node.cpp
gcs_eurathlon/: CMakeLists.txt  package.xml
gcs_eurathlon/scripts/: gcs_eurathlon_node.py  led.py
gps_follow_car/: CMakeLists.txt  package.xml
gps_follow_car/scripts/: gps_follow_car.py
gps_handler/: CMakeLists.txt  package.xml
gps_handler/scripts/: LatLongUTMconversion.py  gps_handler_node.py
gps_handler/srv/: IsNear.srv
imgfile_to_pub/: CMakeLists.txt  package.xml
imgfile_to_pub/launch/: img_file.launch
imgfile_to_pub/src/: imgfile_to_pub_node.cpp
matrice_from_imu/: CMakeLists.txt  package.xml
matrice_from_imu/launch/: mat_imu.launch
matrice_from_imu/src/: mat_from_imu.cpp  test_srv.cpp
matrice_from_imu/srv/: matFromImu.srv
movie_save/: CMakeLists.txt  package.xml
movie_save/launch/: movie_record.launch
movie_save/src/: movie_save_node.cpp
proxy_eura_smach/: CMakeLists.txt  package.xml
proxy_eura_smach/msg/: ErrorMessage.msg
proxy_eura_smach/scripts/: proxy_eura_smach.py
pwm_send/: README.md
pwm_send/pwm_serial_py/: CMakeLists.txt  package.xml
pwm_send/rc_override/: CMakeLists.txt  package.xml
rc_receive/: CMakeLists.txt  package.xml
rc_receive/scripts/: rc_receive_node.py
ruby/: TFlaunchFilecreate.rb  launchFilecreate.rb  template_mapping_default_launch.text  template_tf_static.launch.txt
sauve_gps/: CMakeLists.txt  package.xml
sauve_gps/scripts/: kml.py  sauve_gps_node.py
save_2d_map/: CMakeLists.txt  package.xml
save_2d_map/scripts/: read_map.py  save_map.py
save_node/: CMakeLists.txt  package.xml
save_node/src/: save_node_node.cpp
save_node/srv/: Save_inst_srv.srv
slider_sender/: CMakeLists.txt  package.xml
slider_sender/scripts/: slider_sender_node.py
start_node/: CMakeLists.txt  package.xml
start_node/msg/: StartKillMsg.msg
start_node/scripts/: start_node_node.py
state_integrateur/: CMakeLists.txt  README.md  package.xml
state_integrateur/launch/: state_int.launch
state_integrateur/src/: state_integrateur_node.cpp
test_pkg/: CMakeLists.txt  package.xml
test_pkg/scripts/: testGPS.py
tf_dyn_static_broadcaster/: CMakeLists.txt  package.xml
tf_dyn_static_broadcaster/src/: tf_dyn_static_broadcaster_node.cpp
trans_prox/: CMakeLists.txt  package.xml
trans_prox/scripts/: trans_prox.py
tuto/: README.md
tuto/chatter_login/: CMakeLists.txt  package.xml
tuto/chatter_srv_msg/: CMakeLists.txt  package.xml
tuto/ros_chatter/: CMakeLists.txt  package.xml
tuto/ros_chatter2/: CMakeLists.txt  package.xml
writeLaser/: CMakeLists.txt  README.md  package.xml
writeLaser/launch/: writeHokuyo.launch
(+30 files in other folders)
